--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "konva": "^2.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-konva": "^1.7.15",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
